--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,37 @@
 body{
 
     color: #000000;
-    margin: 0%;
-    padding: 0%;
-    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial;
 }
-
+#cabecera{
+    background-color: #7100a5;
+    color: white;
+    margin: 0;
+    padding: 0.4em;
+    font-weight: bold;
+    box-shadow: 0px 2px 50px 0px rgb(0, 0, 0, 0.5);
+    font-size: 38px;
+}
+#cabecera #tagline{
+    font-weight: normal;
+    font-size: 0.8em;
+    padding:  0 0 0 1em;
+}
 #container{
     width: 70%;
-    padding: 1em;
+    padding: 0em;
     text-align: left;
     border: 1px solid #acacac;
     margin: 0 auto;
 }
 
 #container h1{
-    font-size: 25px;
-    text-align: center;
+    font-size: 45px;
+    text-align: left;
+}
+#post{
+    padding: 1em;
+    font-size: 35px;
 }
