--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,7 +3,7 @@ body{
     color: #000000;
     margin: 0%;
     padding: 0%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: fantasy;
 }
 
 #container{
